--- a/ementor/public/index.html
+++ b/ementor/public/index.html
@@ -40,6 +40,10 @@
     />
     <script src="https://cdn.quilljs.com/1.3.4/quill.js"></script>
 
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="assets/fonts/fontawesome-all.min.css" />
+    <link rel="stylesheet" href="assets/fonts/ionicons.min.css" />
+
     <title>E-mentor</title>
   </head>
 
