--- a/ementor/public/index.html
+++ b/ementor/public/index.html
@@ -35,14 +35,14 @@
       crossorigin="anonymous"
     />
     <link
+      href="https://unpkg.com/ionicons@4.4.7/dist/css/ionicons.min.css"
+      rel="stylesheet"
+    />
+    <link
       href="https://cdn.quilljs.com/1.3.4/quill.snow.css"
       rel="stylesheet"
     />
     <script src="https://cdn.quilljs.com/1.3.4/quill.js"></script>
-
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="assets/fonts/fontawesome-all.min.css" />
-    <link rel="stylesheet" href="assets/fonts/ionicons.min.css" />
 
     <title>E-mentor</title>
   </head>
@@ -81,5 +81,7 @@
       integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
       crossorigin="anonymous"
     ></script>
+
+    <script src="https://unpkg.com/ionicons@4.4.7/dist/ionicons.js"></script>
   </body>
 </html>
