--- a/ementor/public/index.html
+++ b/ementor/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta
       name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+      content="width=device-width, initial-scale=1, shrink-to-fit=yes"
     />
     <meta name="theme-color" content="#000000" />
     <!--
@@ -47,14 +47,11 @@
     <title>E-mentor</title>
   </head>
 
-  <body itemscope="itemscope" itemtype="http://schema.org/WebPage">
+  <body>
     <noscript> You need to enable JavaScript to run this app. </noscript>
     <div
       id="root"
-      itemprop="mainContentOfPage"
-      itemscope="itemscope"
-      itemtype="https://schema.org/SoftwareApplication"
-    ></div>
+    />
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
